修改配置文件

--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,17 @@ kramdown:
   input: GFM
 
 # 作者信息
-author: 
-  name: 闫肃
-  email: suyan0830@gmail.com
-  link: http://yansu.org
-  weibo: http://weibo.com/yansu0711
-  github: http://github.com/suyan
+author:
+  name: 文宝泉
+  email: 198935110@163.com
+  link: http://wenbaoquan.github.io/blog/
+  # weibo: http://weibo.com/yansu0711
+  github: http://github.com/wenbaoquan
 
 # 站点信息
-title: 闫肃的博客 
-description: 闫肃的博客
-url: http://yansu.org
+title: 文宝泉的博客
+description: 文宝泉的博客
+url: http://wenbaoquan.github.io/blog/
 rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
@@ -24,10 +24,10 @@ avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
 favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
 
 # google analytics 设置
-ga:
-  id: UA-54767140-1
-  url: yansu.org
+# ga:
+#   id: UA-54767140-1
+#   url: yansu.org
 
 # disqus 设置
 disqus:
-  shortname: suyan-zh
+  shortname: wenbaoquan-zh
