删除原作者的blog

--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
 favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
 
 # google analytics 设置
-# ga:
-#   id: UA-54767140-1
-#   url: yansu.org
+ga:
+  id: UA-54767140-1
+  url: yansu.org
 
 # disqus 设置
 disqus:
