--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ url: http://wenbaoquan.github.io/blog/
 rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
-avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
-favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
+avatar: blog/assets/img/ranking.png
+favicon: blog/assets/img/ranking.png
 
 # google analytics 设置
 ga:
