--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-permalink: /:year/:month/:day/:title.html
+permalink: /blog/:year/:month/:day/:title.html
 markdown: kramdown
 pygments: true
 
@@ -17,11 +17,11 @@ author:
 title: 文宝泉的博客
 description: 文宝泉的博客
 url: http://wenbaoquan.github.io/blog/
-rss_url: /pages/atom.xml
+rss_url: /blog/pages/atom.xml
 
 # avatar头像及Favicon
-avatar: blog/assets/img/ranking.png
-favicon: blog/assets/img/ranking.png
+avatar: /blog/assets/img/ranking.png
+favicon: /blog/assets/img/ranking.png
 
 # google analytics 设置
 ga:
