--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ url: http://wenbaoquan.github.io/blog/
 rss_url: /blog/pages/atom.xml
 
 # avatar头像及Favicon
-avatar: /blog/assets/img/ranking.png
-favicon: /blog/assets/img/ranking.png
+avatar: /blog/assets/img/clover.jpeg
+favicon: /blog/assets/img/clover.jpeg
 
 # google analytics 设置
 ga:
