--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,39 @@
-permalink: /:year/:month/:day/:title.html
-markdown: kramdown
-pygments: true
+# Site settings
+title: 文宝泉的个人博客
+email: 605655201@qq.com
+description: > # this means to ignore newlines until "baseurl:"
+  文宝泉的博客
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://wenbaoquan.github.io/blog/" # the base hostname & protocol for your site
+rss_url: /pages/feed.xml
 
-kramdown:
-  input: GFM
+# Sidebar filter
+# Choose 'tag' or 'category' as filter in sidebar.
+filter: 'category'
 
-# 作者信息
-author:
-  name: 文宝泉
-  email: 198935110@163.com
-  link: http://wenbaoquan.github.io/blog/
-  # weibo: http://weibo.com/yansu0711
-  github: http://github.com/wenbaoquan
-
-# 站点信息
-title: 文宝泉的博客
-description: 文宝泉的博客
-url: http://wenbaoquan.github.io/blog/
-rss_url: /blog/pages/atom.xml
+# Social account
+twitter: ""
+# weibo:    ID
+github: wenbaoquan
+# codepen:  username
+# dribbble: username
 
 # avatar头像及Favicon
-avatar: /blog/assets/img/clover.jpeg
-favicon: /blog/assets/img/ranking.png
-
-# google analytics 设置
-ga:
-  id: UA-54767140-1
-  url: yansu.org
+avatar: http://o7emt00tc.bkt.clouddn.com/head_icon.png
+favicon: http://o7emt00tc.bkt.clouddn.com/head_icon.png
 
 # disqus 设置
 disqus:
-  shortname: wenbaoquan-zh
+  shortname: wenbaoquan
+
+# google analytics 设置
+ga:
+  id: UA-77963846-1
+  url: http://wenbaoquan.github.io/blog/
+
+# Build settings
+permalink: /:year/:month/:day/:title.html
+markdown: kramdown
+highlighter: rouge
+sass:
+  style: compressed
