--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: 605655201@qq.com
 description: > # this means to ignore newlines until "baseurl:"
   文宝泉的博客
 baseurl: "/blog" # the subpath of your site, e.g. /blog/
-url: "http://wenbaoquan.github.io/" # the base hostname & protocol for your site
+url: "http://wenbaoquan.github.io" # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
 
 # Sidebar filter
