--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,34 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: 文宝泉的个人博客
-email: 605655201@qq.com
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Your awesome title
+email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  文宝泉的博客
-baseurl: "/blog" # the subpath of your site, e.g. /blog/
-url: "http://wenbaoquan.github.io" # the base hostname & protocol for your site
-rss_url: /pages/feed.xml
-
-# Sidebar filter
-# Choose 'tag' or 'category' as filter in sidebar.
-filter: 'category'
-
-# Social account
-twitter: ""
-# weibo:    ID
-github: wenbaoquan
-# codepen:  username
-# dribbble: username
-
-# avatar头像及Favicon
-avatar: http://o7emt00tc.bkt.clouddn.com/head_icon.png
-favicon: http://o7emt00tc.bkt.clouddn.com/head_icon.png
-
-# disqus 设置
-disqus:
-  shortname: wenbaoquan-blog
-
-# google analytics 设置
-ga:
-  id: UA-77963846-1
-  url: http://wenbaoquan.github.io/blog/
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
-permalink: /:year/:month/:day/:title.html
 markdown: kramdown
-highlighter: rouge
-sass:
-  style: compressed
+theme: minima
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
